chore: api simple sections
